# Lab2

./: README.md
Exam2/: CMakeCache.txt  CMakeLists.txt  Makefile  calc.c  cmake_install.cmake  gmon.out  main.c
Exam3/: matrix  matrix.c
Exam4/: tree
assert/: CMakeLists.txt  Makefile  assert.c  assert_test  assert_test.c  cmake_install.cmake
lib/: calc
lib2/: calc  main.c
lib3/: calc  main.c
project2/: Makefile.in
sterror/: CMakeCache.txt  Makefile  perror.c  strerror_use
