ADD_LIBRARY(CalcLib STATIC calc.c)

ADD_EXECUTABLE(CalcApp main.c)

TARGET_LINK_LIBRARIES(CalcApp CalcLib)

SET_TARGET_PROPERTIES(CalcApp PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/)
SET_TARGET_PROPERTIES(CalcLib PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
